# algebraic-complex-numbers

./: LICENSE  README.md
src/: CMakeLists.txt  arith.cpp  arith.hpp  basics.hpp  matrix.cpp  matrix.hpp  matrix_constructs.hpp  tests.cpp
